--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 body {
     height: 100vh;
     margin: 0;
-    background-image: url("/latihan/images/dufan4.jpeg");
+    background-image: url("/HTMLcantik4/dufan4.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
